--- a/game.html
+++ b/game.html
@@ -10,6 +10,13 @@
 
 <body>
     <div class="game" id="game-body">
+        <div class="all_lives">
+            <div class="heart"><i class="fa-solid fa-heart fa-beat " style="color: #ff0000;"></i></div>
+            <div class="heart"><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></div>
+            <div class="heart"><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></div>
+            <div class="heart"><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></div>
+            <div class="heart"><i class="fa-solid fa-heart fa-beat" style="color: #ff0000;"></i></div>
+          </div>
         <div id="timer-box"><span>Time: </span><span id="timer">60</span><span> sec</span></div>
         <div id="max-lives">
             <div id="lives">
@@ -18,6 +25,7 @@
     </div>
     </div>
     <script src="./game.js"></script>
+    <script src="https://kit.fontawesome.com/760cacc220.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
